# nugget

./: .gitignore  LICENSE  README.md  pyproject.toml
nugget/: __init__.py  watcher.py  watchlist.json
